# opensinabro

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yaml  justfile
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: deploy-pages.yml
crates/namumark/: Cargo.toml
crates/namumark-analysis/: Cargo.toml
crates/namumark-analysis/src/: diagnostic.rs  lib.rs
crates/namumark-ast/: Cargo.toml
crates/namumark-ast/src/: lib.rs  node.rs  value.rs
crates/namumark-backend-namuwiki/: Cargo.toml
crates/namumark-backend-namuwiki/assets/: namumark.css
crates/namumark-backend-namuwiki/src/: html.rs  lib.rs  sanitize.rs  style.rs  tag.rs
crates/namumark-backend-namuwiki/tests/: allocation_probe.rs  corpus_tests.rs  markup_tests.rs  namuwiki_markup_golden_tests.rs
crates/namumark-backend-namuwiki/tests/corpus/: mod.rs
crates/namumark-backend-namuwiki/tests/golden-namuwiki/: 1993년_한국시리즈.html  1997년_외환_위기.html  PROJECT_SCARD.html  iPhone_6s_Plus.html  군청의_마그멜.html  스타워즈_라이즈_오브_스카이워커.html  요한_네스켄스.html  음수_수학.html  임채정.html  정암사.html  타카하시_미나미.html
crates/namumark-ir/: Cargo.toml
crates/namumark-ir/src/: html.rs  lib.rs
crates/namumark-ir/tests/: serialization_tests.rs
crates/namumark-parser/: Cargo.toml
crates/namumark-parser/examples/: astdump.rs  residue_scan.rs
crates/namumark-parser/src/: lib.rs  lower.rs  semantics.rs
crates/namumark-parser/tests/: golden_tests.rs  nesting_tests.rs  parser_tests.rs  termination_tests.rs
crates/namumark-parser/tests/golden-ast/: 1993년_한국시리즈.ast  1997년_외환_위기.ast  PROJECT_SCARD.ast  iPhone_6s_Plus.ast  군청의_마그멜.ast  스타워즈_라이즈_오브_스카이워커.ast  요한_네스켄스.ast  음수_수학.ast  임채정.ast  정암사.ast  타카하시_미나미.ast
crates/namumark-parser/tests/model/: mod.rs
crates/namumark-playground/: Cargo.toml
crates/namumark-playground/src/: lib.rs
crates/namumark-render/: Cargo.toml
crates/namumark-render/src/: condition.rs  context.rs  layout.rs  lib.rs  resolve.rs
crates/namumark-render/tests/: pipeline_tests.rs
crates/namumark-syntax/: Cargo.toml
crates/namumark-syntax/examples/: cstdump.rs
crates/namumark-syntax/src/: event.rs  kind.rs  lib.rs  parser.rs  sink.rs
crates/namumark-syntax/tests/: lossless_tests.rs
crates/namumark-text/: Cargo.toml
crates/namumark-text/src/: lib.rs
crates/namumark/examples/: debug_list.rs
crates/namumark/src/: ast.rs  block.rs  inline.rs  lib.rs  table.rs
crates/namumark/tests/: golden_tests.rs  nesting_tests.rs  parser_tests.rs  termination_tests.rs
crates/wiki-account/: Cargo.toml
crates/wiki-account/src/: actor.rs  credential.rs  error.rs  lib.rs  notification.rs  user.rs  verification.rs
crates/wiki-authorization/: Cargo.toml
crates/wiki-authorization/src/: evaluate.rs  lib.rs  repository.rs
crates/wiki-discussion/: Cargo.toml
crates/wiki-discussion/src/: edit_request.rs  error.rs  lib.rs  thread.rs
crates/wiki-document/: Cargo.toml
crates/wiki-document/src/: error.rs  file.rs  lib.rs  reference.rs  render.rs  repository.rs  revise.rs  scan.rs  title.rs
crates/wiki-search/: Cargo.toml
crates/wiki-search/src/: lib.rs
crates/wiki-server/: Cargo.toml
crates/wiki-server/migrations/: 0001_enumerations.sql  0002_account.sql  0003_document.sql  0004_authorization.sql  0005_discussion.sql  0006_site.sql  0007_default_acl.sql  0008_session.sql  0009_default_license.sql  0010_drop_render_cache.sql
crates/wiki-server/src/: account.rs  admin.rs  api.rs  browse.rs  discussion.rs  edit.rs  error.rs  file.rs  handler.rs  history.rs  lib.rs  main.rs  operate.rs  proxy.rs  security.rs  session.rs  session_store.rs  state.rs  template.rs
crates/wiki-server/templates/: edit.html  shell.html
docs/: README.md  architecture.md
docs/design/: 01-red-green-syntax-tree.md  02-render-pipeline.md  03-crate-structure.md  04-namuwiki-parity.md  05-template-parameters.md  06-wiki-server-requirements.md  07-wiki-server-architecture.md  08-wiki-server-data-model.md
docs/spec/: implementation-status.md  namumark.md  theseed-server.md
fixtures/: PROJECT_SCARD.namu  README.md  iPhone_6s_Plus.namu  요한_네스켄스.namu  음수_수학.namu
fixtures/corpus/: README.md  termination_corpus.namu
fixtures/corpus/01-inline/: adjacent-same-marker.case  bold-inside-italic.case  bold-italic.case  bold.case  italic.case  literal-inline.case  marker-touching-hangul.case  strikethrough-hyphen.case  strikethrough-tilde.case  styles-in-one-line.case  subscript.case  superscript.case  underline-inside-bold.case  underline.case
fixtures/corpus/02-size-color/: color-css-name.case  color-dark-pair.case  color-dark-space-after-comma.case  color-hex3.case  color-hex6.case  color-inside-size.case  color-rgba.case  color-transparent.case  color-underline-inside.case  color-underline-outside.case  color-uppercase-hex.case  color-without-space.case  size-level-out-of-range.case  size-minus-3.case  size-nested-accumulates.case  size-plus-1.case
fixtures/corpus/03-link/: anchor-link.case  anchor-macro.case  category-as-link.case  category-english-prefix.case  child-nested.case  child.case  display-styled.case  document-with-display.case  document.case  empty-anchor.case  empty-target-with-display.case  escaped-bracket-in-title.case  escaped-pipe.case  escaped-sharp-in-title.case  external.case  (+11 more)
fixtures/documents/: 1997년_외환_위기.namu
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  namumark.css  not-found.tsx  providers.tsx
frontend/components/: document-actions.tsx  document-editor.tsx  document-info.tsx  navigation-column.tsx  page-header.tsx
frontend/lib/: api.ts  client-api.ts  document-route.ts  draft-store.ts  format.ts  navigation-progress.ts  site.ts  wiki-path.ts
playground/: README.md  index.html  package-lock.json  package.json  vite.config.ts
playground/src/: App.tsx  examples.ts  index.css  main.tsx  store.ts
tools/: fetch-parity-corpus.py  grade-corpus-evidence.py
tools/parity/: Cargo.toml  README.md  known-differences.txt
tools/parity/src/: corpus.rs  main.rs  normalize.rs  report.rs
(+407 files in other folders)
