[workspace]
resolver = "2"
members = [
    "crates/namumark-analysis",
    "crates/namumark-ast",
    "crates/namumark-backend-namuwiki",
    "crates/namumark-ir",
    "crates/namumark-parser",
    "crates/namumark-playground",
    "crates/namumark-render",
    "crates/namumark-syntax",
    "crates/namumark-text",
    "tools/parity",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
