[package]
name = "namumark-backend-namuwiki"
description = "나무위키 동등 마크업 백엔드"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
namumark-ast = { path = "../namumark-ast" }
namumark-ir = { path = "../namumark-ir" }

[dev-dependencies]
namumark-parser = { path = "../namumark-parser" }
namumark-render = { path = "../namumark-render" }
