[package]
name = "namumark-backend-namuwiki"
description = "나무위키 동등 마크업 백엔드"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
namumark-ast.workspace = true
namumark-ir.workspace = true

[dev-dependencies]
namumark-parser.workspace = true
namumark-render.workspace = true
serde_json.workspace = true
