[package]
name = "namumark-ir"
description = "나무마크 렌더링 IR 타입과 백엔드 계약"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
namumark-ast.workspace = true
namumark-text.workspace = true
serde.workspace = true
ts-rs.workspace = true

[dev-dependencies]
serde_json.workspace = true
