[package]
name = "namumark-playground"
description = "나무마크 플레이그라운드 WASM 바인딩"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
namumark-analysis.workspace = true
namumark-backend-namuwiki.workspace = true
namumark-ir.workspace = true
namumark-parser.workspace = true
namumark-render.workspace = true
namumark-syntax.workspace = true
wasm-bindgen.workspace = true
