[package]
name = "namumark-render"
description = "나무마크 렌더링 pass (resolve·layout)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
namumark-ast = { path = "../namumark-ast" }
namumark-ir = { path = "../namumark-ir" }
namumark-parser = { path = "../namumark-parser" }
namumark-text = { path = "../namumark-text" }
