[package]
name = "namumark-render"
description = "나무마크 렌더링 pass (resolve·layout)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
namumark-analysis.workspace = true
namumark-ast.workspace = true
namumark-ir.workspace = true
namumark-parser.workspace = true
