[package]
name = "wiki-account"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
argon2 = "0.5.3"
rand = "0.10.2"
sha2 = "0.11.0"
serde_json.workspace = true
