[package]
name = "wiki-discussion"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wiki-account = { workspace = true }
wiki-document = { workspace = true }

sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = "1.0.150"
