[package]
name = "wiki-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "opensinabro"
path = "src/main.rs"

[[bin]]
name = "opensinabro-import"
path = "src/bin/import.rs"

[dependencies]
wiki-account.workspace = true
wiki-document.workspace = true
wiki-search = { workspace = true }

namumark-backend-namuwiki = { workspace = true }

axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
askama = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
axum-extra = { version = "0.12.6", features = ["cookie"] }
wiki-authorization.workspace = true
uuid.workspace = true
serde_json = "1.0.150"
tower-sessions = "0.15.0"
time = "0.3.53"
rmp-serde = "1.3.1"
async-trait = "0.1.89"
wiki-discussion.workspace = true
hyper = { version = "1.10.1", features = ["client"] }
hyper-util = { version = "0.1.19", features = ["client", "client-legacy", "http1", "tokio"] }
