[package]
name = "parity"
description = "나무위키(the seed) 렌더 결과와 우리 렌더 결과를 대조하는 검증 도구"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
namumark-ast.workspace = true
namumark-backend-namuwiki.workspace = true
namumark-parser.workspace = true
namumark-render.workspace = true
